fix post-it overflow

--- a/m1/w3/d5/Progetto_finale/assets/css/style.css
+++ b/m1/w3/d5/Progetto_finale/assets/css/style.css
@@ -329,8 +329,8 @@ button:active {
         width: 100%;
         height: 100%;
         background-color: greenyellow;
-        linear-gradient() resize: none;
-        overflow: scroll;
+        resize: none;
+        overflow: auto;
         border-style: none;
         transition: transform .1s;
         transition-timing-function: ease-out;
